Revision history for {{$dist->name}}

{{$NEXT}}
  - A new class for text parsing rules created Text::Parser::Parser (#17).
  - Import functions from String::Util, Scalar::Util, String::Util::Match, String::Util::Range, and String::Index.
    These can be accessed inside the ExAWK string rules directly (#44)
  - Added new methods to Text::Parser called add_rule to create rules (#37), and clear_rules to delete rules (#40)
  - Rules support range shortcuts like ${3+}, @{2+}, and \@{3+} (#39), (#45)
  - Added new method join_range available when auto_split => 1 (#38)

0.920     2019-06-09 19:48:42-07:00 America/Los_Angeles
  - Bug in new version of Dist::Zilla::Plugin::Test::MinimumVersion causes bug. Work-around provided (#35). See
    Issue #8 on https://github.com/doherty/Dist-Zilla-Plugin-Test-MinimumVersion/issues

0.919     2019-04-21 23:53:30-07:00 America/Los_Angeles
  - Change auto_split and multiline_type into read-write attributes: multiline_type can be changed back to undef (Issues #32, #31, #26)
  - Add a new function called field_range that will return the elements in a given range (#26)
  - Check that file is a plain text file with -T, make code ready for future Text::Parser::AutoUncompress (Issue #33)
  - Elaborated Pod for functions in Text::Parser::AutoSplit and mentioned them in Text::Parser Pod (Issue #27)

0.918     2019-04-18 00:28:58-07:00 America/Los_Angeles
  - Add a test to ensure that auto_split works correctly even without auto_trim (Issue: #18)
  - Add a new method named this_line which works in all subclasses (Issue: #20)
  - Don't use setting method in Text::Parser::Multiline
  - Remove line_auto_manip and setting methods
  - Refactor code in Text::Parser::Multiline
  - Re-organize and simplify POD, test all links (Issue: #22)

0.917     2019-04-15 22:56:49-07:00 America/Los_Angeles
  - Fixed broken link in pod as reported by CPANTS. #15 (by M Anwar)